<resources>
    <string name="app_name">anjesh-CardioBook</string>
    <string name="action_settings">Settings</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="systolic">Systolic</string>
    <string name="diastolic">Diastolic</string>
    <string name="heartRate">Heart Rate</string>
    <string name="comment">Comment</string>
    <string name="dateHint">2018/10/30</string>
    <string name="timeHint">23:40</string>
    <string name="pressureHint">120 mm Hg</string>
    <string name="heartRateHint">120 bpm</string>
    <string name="commentHint">None</string>
</resources>
